--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,13 +18,13 @@
   --twitter-blue: #2aa9e0;
 }
 
-@media(max-width: 1080px) {
+@media (max-width: 1080px) {
   html {
     font-size: 93.75%;
   }
 }
 
-@media(max-width: 720px) {
+@media (max-width: 720px) {
   html {
     font-size: 87.5%;
   }
@@ -35,8 +35,11 @@ body {
   color: var(--text);
 }
 
-body, input, textarea, button {
-  font: 400 1rem "Inter", sans-serif;
+body,
+input,
+textarea,
+button {
+  font: 400 1rem 'Inter', sans-serif;
 }
 
 button {
